syntax = "proto3";

package posts;

import "google/protobuf/empty.proto";

message Post {
  int64 id = 1;
  string title = 2;
  string comment = 3;
}

message PostCreateRequest {
  string title = 1;
}

message PostAddCommentRequest {
  string post_id = 1;
  string comment = 2;
}

message PostListResponse {
  repeated Post posts = 1;
}

service Posts {
  rpc CreatePost (PostCreateRequest) returns (Post);
  rpc AddComment (PostAddCommentRequest) returns (Post);
  rpc ListPosts (google.protobuf.Empty) returns (PostListResponse);
}
